[package]
name = "TrelloBatchRunner"
version = "0.1.0"
authors = ["Corrina Sivak <csivak345@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.11.0", features=["json"] }
tokio = {version="1.16.1", features=["full"] }
serde = { version="1.0.123", features=["derive"] }
